QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/TwilioSF__Message__c.object-meta.xml
<CustomObject>
    <description>This object will store all the messages that will be sent out of Salesforce to Twilio</description>
    <label>Twilio Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>Message Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>