QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Activity_Logging_Failed__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Activity_Logging_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Logging Failed</label>
    <type>Checkbox</type>
</CustomField>