QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__API_Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__API_Failure_Message__c</fullName>
    <label>API Failure Message</label>
    <type>TextArea</type>
</CustomField>