QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Archived__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>