QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__BulkMessage__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__BulkMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Message</label>
    <referenceTo>TwilioSF__BulkMessage__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>