QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Created_From_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Created_From_Platform_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Platform Event</label>
    <type>Checkbox</type>
</CustomField>