QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>