QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>