QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Lead_Contact_Update_Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Lead_Contact_Update_Failure_Message__c</fullName>
    <label>Lead Contact Update Failure Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>