QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Media_Url__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Media_Url__c</fullName>
    <description>A URL that points to an image to be sent via SMS.</description>
    <inlineHelpText>A URL that points to an image to be sent via SMS.</inlineHelpText>
    <label>Media Url</label>
    <type>Url</type>
</CustomField>