QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Number_of_Media__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Number_of_Media__c</fullName>
    <label>Number of Media</label>
    <length>10</length>
    <type>Text</type>
</CustomField>