QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Parent_Record_Url__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Parent_Record_Url__c</fullName>
    <formula>IF(ISBLANK( TwilioSF__SF_Parent_Record_Id__c  ), &#39;&#39;, 
HYPERLINK(&quot;/&quot;&amp; TwilioSF__SF_Parent_Record_Id__c, &quot;View Related Parent Record&quot;) 
)</formula>
    <label>Parent Record Url</label>
    <type>Text</type>
</CustomField>