QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__To_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__To_Number__c</fullName>
    <description>This field will store the phone number that the text message will be sent to</description>
    <label>To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>