QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Total_Media_Records__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Total_Media_Records__c</fullName>
    <label>Total Media Records</label>
    <summaryForeignKey>TwilioSF__Media__c.TwilioSF__Twilio_Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>