QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Twilio_Console_URL__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Twilio_Console_URL__c</fullName>
    <formula>IF(ISBLANK(TwilioSF__Message_SID__c), &#39;&#39;, 
HYPERLINK(&quot;https://www.twilio.com/console/sms/logs/&quot;&amp; TwilioSF__Message_SID__c, &quot;https://www.twilio.com/console/sms/logs/&quot;&amp; TwilioSF__Message_SID__c)
)</formula>
    <label>Twilio Console URL</label>
    <type>Text</type>
</CustomField>