QB.Stage/force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Unread__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Unread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unread</label>
    <type>Checkbox</type>
</CustomField>